--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -122,7 +122,7 @@
 
       {% if author.github %}
         <li>
-          <a href="https://github.com/{{ author.github }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
+          <a href="https://github.com/{{ author.github }}" target="_blank" itemprop="sameAs" rel="nofollow noopener noreferrer me">
             <i class="fab fa-fw fa-github" aria-hidden="true"></i><span class="label">GitHub</span>
           </a>
         </li>
